--- a/src/App.css
+++ b/src/App.css
@@ -12,25 +12,77 @@
   width : 120px;
   cursor: pointer;
 }
-.logoutButton {
-  border: 1px solid #333333;
-  border-radius: 50px;
-  
-  padding : 1rem 1rem;
-  cursor: pointer;
-  float : right;
+
+.card-main{
+  display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 10px;
+    gap: 20px;
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+}
+.card-container{
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-rows: 140px 65px 125px 53px;
+}
+@media only screen and (max-width:768px) {
+  .card-main{
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media only screen and (max-width:400px) {
+  .card-main{
+    grid-template-columns: 1fr;
+  }
 }
 .spaceHeader{
-  background-color: #333333;
-  display:flex;
+  background-color: white;
+  display:grid;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  max-width: 1200;
+  max-width: 1200px;
+  width: 100%;
+  margin: auto;
+  height: 10%;
+}
+.cardFooter{
+  background-color: lightgray;
+}
+.card-body .cardContent{
+  height:20%;
+  /* background-color: white; */
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.footer-content{
+  background-color: lightgray;
+  padding: 3px;
 }
 .headerNames {
   list-style-type: none;
+  display: flex;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333333;
+  background-color: white;
 }
+.headerNames button{
+  background-color: white; 
+  color: orangered;
+  padding: 9px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 11px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 20px;
+  border: 1px solid lightgray;
+}
+
 .headerList {
   float: left;
 }
@@ -43,29 +95,45 @@
   text-decoration: none;
 }
 
-.headerList a:hover {
-  background-color: #111111;
+.selectedName {
+  border: 1px solid orangered !important;
 }
-.rocketsCard{
-  width: 23%;
-  margin: 1%;
+
+.image-container img{
+  overflow: hidden;
+  width:100%;
+  height:100%;
 }
-.rocketBlock{
-  padding: 2%;
-  height: 100%;
-  list-style-type: none;
-  box-shadow: 5px 5px 10px grey;
+
+.card-title{
+  margin: 3%;
 }
-.rocketDetails{
-  text-align: center;
+.card-desc{
+  margin: 3%;
+  font-size: 14px;
+  overflow:hidden;
+  text-overflow: ellipsis;
 }
-.rocketDiv{
-  /* border: 3px solid green; */
-  display: flex;
-  flex-wrap: wrap;
-  padding: 1%;
+.news-author{
+  color:#ce5a2f;
 }
-img{
-  height:250px;
-  width:250px;
+
+.card-content{
+  width:200px;
+  margin: 1rem;
+  margin-top: 0.5rem;
+}
+
+.card-container{
+  background-color: white;
+  border-radius: 9px 9px 9px 9px;
+  overflow:hidden;
+  box-shadow:5px 5px 10px grey;
+}
+.footer-content{
+  background-color: #e8e5e6;
+  padding:2%;
+  width:100%;
+  font-size: 13px;
+  border: 0 0 5px 5px;
 }
